--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -2,3 +2,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border: 1px solid;
+  max-width: 475px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
